[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickit"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
description = "Event-based device simulation framework"
dependencies = [
    "aiohttp",
    "aiokafka",
    "aiozmq",
    "immutables",
    "pydantic>=2.0",
    "pyyaml",
    "pyzmq",
    "softioc",
    "typing_extensions",
    "click!=8.1.4,!=8.1.5", #https://github.com/pallets/click/issues/2558

] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black",
    "pyright",
    "flake8-isort",
    "Flake8-pyproject",
    "pipdeptree",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "pytest-cov",
    "pytest-flake8",
    "pytest-black",
    "pytest-asyncio",
    "pytest-pydocstyle",
    "sphinx<=7.2.6", #https://github.com/sphinx-doc/sphinx/issues/11662
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-direct",
    "mock",
    "types-mock",
    "types-PyYAML",
    "aioca",
]

[project.scripts]
tickit = "tickit.cli:main"

[project.urls]
GitHub = "https://github.com/dls-controls/tickit"

[[project.authors]] # Further authors may be added by duplicating this section
email = "callum.forrester@diamond.ac.uk"
name = "Callum Forrester"


[tool.setuptools_scm]
write_to = "src/tickit/_version.py"

[tool.pyright]
reportMissingImports = false # Ignore missing stubs in imported modules
ignore = ["src/tickit/_version.py"]

[tool.isort]
float_to_top = true
profile = "black"
skip=["setup.py","conf.py","build"]

[tool.flake8]
extend-ignore = [
    "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
    "F811", # support typing.overload decorator
    "F722", # allow Annotated[typ, some_func("some string")]
]
max-line-length = 88 # Respect black's line length (default 88),
exclude = [".tox", "venv"]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100", # Ignore missing docstrings in public modules
    "D104", # Ignore missing docstrings in public packages
    "D418", # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525
]

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=tickit --cov-report term --cov-report xml:cov.xml
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:aiozmq", # Supress warnings about deprecated asyncio syntax in aiozmq
    "ignore::ImportWarning" # Import issue in six, used by aiokafa https://github.com/benjaminp/six/issues/368
]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"

[tool.coverage.run]
data_file = "/tmp/tickit.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,pyright,pytest,docs}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    pyright
    sphinx-build
    sphinx-autobuild
commands =
    pytest: pytest {posargs}
    pyright: pyright src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
    docs: sphinx-{posargs:build -EW --keep-going} -T docs build/html
"""
