[metadata]
name = tickit
description = Event-based device simulation framework
url = https://github.com/dls-controls/tickit
author = Callum Forrester
author_email = callum.forrester@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    aiohttp
    aiokafka
    aiozmq==0.9.0
    apischema==0.16.1
    immutables
    pyyaml
    pyzmq==19.0.2
    softioc
    click

[options.extras_require]
# For development tests/docs
dev =
    black==21.7b0
    isort>5.0
    pytest-cov
    pytest-mypy
    pytest-flake8
    pytest-black
    pytest-asyncio
    pytest-pydocstyle
    flake8-isort
    sphinx-rtd-theme-github-versions
    mock
    types-mock
    types-PyYAML
    aioca

# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
# Include a command line script
console_scripts =
    tickit = tickit.cli:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True
exclude = .*eiger.*

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]

[pydocstyle]
# Make pydocstyle use google docstring format
convention = google
add-ignore =
    D100, # Ignore missing docstrings in public modules
    D104, # Ignore missing docstrings in public packages
    D418, # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --pydocstyle --doctest-glob="*.rst"
     --cov=tickit --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if sys.version_info
    if TYPE_CHECKING
    if False
    pass